21.may (ws)
      - new: arpeggios spanning more than one staff (shift + up/down in
        edit mode)
      - new: switch between tablature and normal staff
20.may (ws)
      - new: fret diagram editor
19.may (ws)
      - new: fret diagrams
18.may (ws)
      - new: more Pedal line types
17.may (ws)
      - tablature: <J> <Ctrl+J> shortcuts change string while pitch
        remains constant
16.may (ws)
      - add DejaVuSerif.ttf; used as build in standard text font for
        tablature
15.may (ws)
      - first code for tablature support; new test file: tab.mscx
      - ove import update from Rui Fan:
        - add recognition of percussion staff
        - read title, composer, poet, add title box
        - add full measure rest to empty bar
        - fix **http://musescore.org/en/node/5616*<http://musescore.org/en/node/5616>
        - add a combo box in [Preference]->[Import] to let user select import
          string's encoding, when import binary files like ove, midi.
          Now ove follows this setting, see Preferences.importCharset.
14.may (ws)
      - new preference parameter: default scale for new score views
      - do not show ledger lines if staff lines are set invisible
13.may (ws)
      - integration of Aeolus organ software synthesizer
      - extension of playback architecture: its now possible to assign
        midi instruments to individual voices in a staff
      - fix #5744: grace notes do not transpose
      - fix #5732: second note in measure missing accidental
      - fix #5742: 0.9.5 score crashes 0.9.6 RC1
7.may (ws)
      - fix #5683: No cautionary time signatures when changing between
        two different time signatures of the same note value
6.may (ws)
      - cursor up/down moves selected rest one staff line up/down
      - implement playback of mordent
      - apply consistency checks after score is loaded: make sure voice 1
        is continuous and has no gaps
5.may (ws)
      - some effort to support tuplets for capella import