@@ -183,7 +183,7 @@ void MuseScore::loadFile()
          this,
          tr("MuseScore: Load Score"),
          lastOpenPath,
-         tr("All Supported Files (*.mscz *.mscx *.msc *.xml *.mxl *.mid *.midi *.kar *.md *.mgu *.MGU *.sgu *.SGU *.cap *.pdf *.ove);;"
+         tr("All Supported Files (*.mscz *.mscx *.msc *.xml *.mxl *.mid *.midi *.kar *.md *.mgu *.MGU *.sgu *.SGU *.cap *.pdf *.ove *.bww);;"
             "MuseScore Files (*.mscz *.mscx *.msc);;"
             "MusicXML Files (*.xml *.mxl);;"
             "MIDI Files (*.mid *.midi *.kar);;"
@@ -193,6 +193,7 @@ void MuseScore::loadFile()
             "BB Files <experimental> (*.mgu *.MGU *.sgu *.SGU);;"
             "PDF Files <experimental omr> (*.pdf);;"
         	"Overture Files <experimental> (*.ove);;"
+            "Bagpipe Music Writer Files <experimental> (*.bww);;"
             "All Files (*)"
             )
          );
