@@ -559,6 +559,7 @@ class Score : public QObject {
       bool importCapella(const QString& name);
       bool importOve(const QString& name);
       bool importPdf(const QString& name);
+      bool importBww(const QString& name);
       void saveFile(QFileInfo& info, bool autosave);
       void saveFile(QIODevice* f, bool autosave);
       void saveCompressedFile(QFileInfo&, bool autosave);
