@@ -1,3 +1,6 @@
+24.may (lv)
+      - add bww files to open file dialog, actual import not implemented yet
+        feature request http://musescore.org/en/node/5637
 21.may (ws)
       - new: arpeggios spanning more than one staff (shift + up/down in
         edit mode)
